# note-scanner

./: CMakeLists.txt  LICENSE  README.md
include/: myLibrary.h  myLibrary.h~
src/: main.cpp
